[Chromium] pack Gamepad shared memory structure https://bugs.webkit.org/show_bug.cgi?id=78022

Patch by Scott Graham <scottmg@chromium.org> on 2012-02-17
Reviewed by Darin Fisher.

Add #pragma pack around definition of shared memory structures to
avoid differences across compilers and platforms. Add COMPILE_ASSERT
to verify expected size.

* public/platform/WebGamepad.h:
(WebKit):
* public/platform/WebGamepads.h:
(WebKit):

git-svn-id: svn://svn.chromium.org/blink/trunk@108099 bbb929c8-8fbe-4397-9dbb-9b2b20218538