third_party/WebKit/Source/WebKit/chromium/public/platform/WebGamepads.h
@@ -27,7 +27,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "WebGamepad.h"
 
+#if WEBKIT_IMPLEMENTATION
+#include <wtf/Assertions.h>
+#endif
+
 namespace WebKit {
+
+#pragma pack(push, 1)
 
 // This structure is intentionally POD and fixed size so that it can be stored
 // in shared memory between hardware polling threads and the rest of the
@@ -45,6 +51,12 @@ public:
     // Gamepad data for N separate gamepad devices.
     WebGamepad items[itemsLengthCap];
 };
+
+#if WEBKIT_IMPLEMENTATION
+COMPILE_ASSERT(sizeof(WebGamepads) == 1864, WebGamepads_has_wrong_size);
+#endif
+
+#pragma pack(pop)
 
 }
 
